--- a/ilun1.css
+++ b/ilun1.css
@@ -105,7 +105,7 @@ a{
     margin-top: -22.5px;
     width: 49px;
     height: 80px;
-    background: url("./ar.png") no-repeat 0 0;
+    background: url("./visual design/ar.png") no-repeat 0 0;
 }
 
 .arrow.changeLeft {
